--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,13 +6,11 @@ website:
   navbar:
     right:
       - about.qmd
-      - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+      - icon: linkedin
+        href: https://www.linkedin.com/
 format:
   html:
-    theme: cosmo
+    theme: Litera
     css: styles.css
 
 editor: visual
